Update shcema
