# gen/announcement/api.gen.go
@@ -23,18 +23,14 @@ type Announcement struct {
 
 // AnnouncementsListParams defines parameters for AnnouncementsList.
 type AnnouncementsListParams struct {
-	// SortByDateAsc 日時昇順ソートするか
+	// SortByDate 日時ソート
 	//
-	// 降順ソートの場合はfalseを指定
-	//
-	// デフォルト値はtrue (昇順ソート)
-	SortByDateAsc *bool `form:"sortByDateAsc,omitempty" json:"sortByDateAsc,omitempty"`
+	// 昇順ソートの場合は`asc`を指定、降順ソートの場合は`desc`を指定
+	SortByDate *string `form:"sortByDate,omitempty" json:"sortByDate,omitempty"`
 
 	// FilterIsActive 公開状態で絞り込むか
 	//
-	// 公開状態ではないもののみを抽出する場合はfalseを指定
-	//
-	// デフォルト値はnull (すべての公開状態を含む)
+	// 公開状態のみを抽出する場合は`true`を指定
 	FilterIsActive *bool `form:"filterIsActive,omitempty" json:"filterIsActive,omitempty"`
 }
 
@@ -62,11 +58,11 @@ func (siw *ServerInterfaceWrapper) AnnouncementsList(c *gin.Context) {
 	// Parameter object where we will unmarshal all parameters from the context
 	var params AnnouncementsListParams
 
-	// ------------- Optional query parameter "sortByDateAsc" -------------
+	// ------------- Optional query parameter "sortByDate" -------------
 
-	err = runtime.BindQueryParameter("form", false, false, "sortByDateAsc", c.Request.URL.Query(), &params.SortByDateAsc)
+	err = runtime.BindQueryParameter("form", false, false, "sortByDate", c.Request.URL.Query(), &params.SortByDate)
 	if err != nil {
-		siw.ErrorHandler(c, fmt.Errorf("Invalid format for parameter sortByDateAsc: %w", err), http.StatusBadRequest)
+		siw.ErrorHandler(c, fmt.Errorf("Invalid format for parameter sortByDate: %w", err), http.StatusBadRequest)
 		return
 	}
 
